Fix image gallery overflow

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -297,17 +297,23 @@
   overflow: hidden;
   flex-wrap: wrap;
 
-  .image {
+  .image-container {
+    overflow: hidden;
     width: 25%;
-    transition: transform .3s;
-    transform: scale(1);
 
     @media (max-width: 1023px) {
       width: 50%;
     }
-
-    &:hover {
-      transform: scale(1.1);
+    
+    .image {
+      width: 100%;
+      height: 100%;
+      transition: transform .3s;
+      transform: scale(1);
+  
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
